--- a/package.json
+++ b/package.json
@@ -4,11 +4,19 @@
   "description": "Provide hook ability for hierarchy class",
   "main": "index.js",
   "directories": {
-    "test": "test"
+    "test": "./node_modules/.bin/jest"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "zhengkenghong",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.12.9",
+    "@babel/plugin-proposal-decorators": "^7.12.1",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-typescript": "^7.12.7",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3"
+  }
 }
